infra/kustomize-helm/databases/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-pg-ingress
  namespace: databases
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - postgres.atoca.house
    secretName: app-pg-tls
  rules:
  - host: postgres.atoca.house
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgresql-cluster-rw
            port:
              number: 5432
